# climate_control

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker_image_publish_ci.yml
controller/: data_central.py  main.py  sensors.py  storage.py  util.py
dashboard/: app.py  data.py
docs/: mqtt.md
measurement_device/: README.md  config.py  devices.py  main.py  test_sensors.py  webserver.py  wifi.py
src/controller/: config.py  exceptions.py  husdata.py  main.py  mqtt.py  sensors.py  storage.py  strategies.py
src/dashboard/: app.py  components.py  data.py
src/dashboard/assets/: style.css
src/husdata/: controllers.py  exceptions.py  exeptions.py  gateway.py  registers.py  util.py
tests/controller/: test_storage.py
tests/integration/: test_gateway.py  test_storage.py
tests/unit/: test_registers.py
