[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conroller", "src/husdata"]

[project]
name = "climate-control"
version = "0.0.4"
description = "Control strategies for heatpump"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "httpx>=0.27.2",
    "paho-mqtt~=1.6.1",
    "pydantic-settings>=2.5.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--ignore=measurement_device"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff==0.6.9",
]
