[metadata]
name = climate_control
version = 0.0.2

[options]
install_requires = 
    httpx
    dash
    dash-bootstrap-components
    dash-bootstrap-templates
    plotly
    pandas
    influxdb-client
    pydantic-settings
    paho-mqtt~=1.6.1

packages = find:

[options.extras_require]
dev = 
    pytest

[options.packages.find]
where=src
